RbA Build/src/objects/MA_Scheduler_Event__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date_Time__c</fullName>
        <description>Actual end time for MAEvent</description>
        <label>Estimated End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date_Time__c</fullName>
        <description>Actual estimated start time of MAEvent</description>
        <label>Estimated Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Sequence__c</fullName>
        <label>Event Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RbA_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RbA Work Order</label>
        <referenceTo>RbA_Work_Order__c</referenceTo>
        <relationshipLabel>MA Scheduler Events</relationshipLabel>
        <relationshipName>MA_Scheduler_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>MA Scheduler Events</relationshipLabel>
        <relationshipName>MA_Scheduler_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <formula>TEXT(RbA_Work_Order__r.Work_Order_Type__c)</formula>
        <label>Work Order Type</label>
        <type>Text</type>
    </fields>
    <label>MA Scheduler Event</label>
    <nameField>
        <label>MA Scheduler Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Scheduler Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>